[iOS] NSGeometry data types are not available in the public SDK https://bugs.webkit.org/show_bug.cgi?id=137536

Reviewed by David Kilzer.

Source/WebCore:

Towards building iOS WebKit with the public iOS SDK, define NSGeometry
data types and functions in terms of CGGeometry data types and functions
because the former is SPI on iOS.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm: Include
header WAKAppKitStubs.h when building for iOS. Otherwise, include header NSGeometry.h.
* platform/graphics/ca/mac/PlatformCALayerMac.mm: Remove import of private header NSGeometry.h.
We will use the NSGeometry data types defined in WAKAppKitStubs.h, which is implicitly imported
by header WAKWindow.h.
* platform/graphics/mac/MediaPlayerProxy.h: Substitute WAKAppKitStubs.h for NSGeometry.h.
* platform/ios/PlatformEventFactoryIOS.mm: Ditto. Also fix up style issues with #import directives.
* platform/ios/WebEvent.mm: Ditto.
* platform/ios/wak/WAKAppKitStubs.h: Define typedefs and macros that map NSGeometry data types
and functions to the analogous CGGeometry data types and functions. Also, remove #ifdef __OBJC__-
guard as the existing content in WAKAppKitStubs.h assumes that this file will only be included
in an Objective-C/Objective-C++ file.
* platform/ios/wak/WAKView.h: Import header WAKAppKitStubs.h instead of defining macros for some
NSGeometry data types.

Source/WebKit/mac:

Substitute header WAKAppKitStubs.h for NSGeometry.h as the latter is a
private header.

* DOM/WebDOMOperationsPrivate.h:

Source/WebKit2:

Substitute header WAKAppKitStubs.h for NSGeometry.h as the latter is a
private header.

* Shared/ios/NativeWebTouchEventIOS.mm:

Canonical link: https://commits.webkit.org/156566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176105 268f45cc-cd09-0410-ab3c-d52691b4dbfc