Source/WebCore/platform/ios/wak/WAKView.h
@@ -28,15 +28,10 @@
 
 #if TARGET_OS_IPHONE
 
+#import "WAKAppKitStubs.h"
 #import "WAKResponder.h"
 #import <Foundation/Foundation.h>
 #import <CoreGraphics/CoreGraphics.h>
-
-#ifndef NSRect
-#define NSRect CGRect
-#endif
-#define NSPoint CGPoint
-#define NSSize CGSize
 
 extern NSString *WAKViewFrameSizeDidChangeNotification;
 extern NSString *WAKViewDidScrollNotification;
