Source/WebKit2/Shared/ios/NativeWebTouchEventIOS.mm
@@ -29,10 +29,10 @@
 #if PLATFORM(IOS)
 
 #import "WebEvent.h"
-#import <Foundation/NSGeometry.h>
 #import <UIKit/UITouch.h>
 #import <UIKit/UIWebTouchEventsGestureRecognizer.h>
 #import <WebCore/IntPoint.h>
+#import <WebCore/WAKAppKitStubs.h>
 #import <wtf/CurrentTime.h>
 
 namespace WebKit {
